--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon -L"
   },
   "dependencies": {
+    "axios": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
@@ -18,6 +19,7 @@
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mercadopago": "^1.5.14",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.6.0",
